[metadata]
name = BF2AutoSpectator
version = 0.4.3
description = An automated spectator for Battlefield 2 written in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cetteup/BF2AutoSpectator
project_urls =
    Bug Tracker = https://github.com/cetteup/BF2AutoSpectator/issues
author = cetteup
author_email = me@cetteup.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3

[options]
packages = BF2AutoSpectator
python_requires = >=3.8

[options.entry_points]
console_scripts =
    bf2-auto-spectator = BF2AutoSpectator.__main__:run
    find-spawn-points = BF2AutoSpectator.find_spawn_points:run